--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,4 +9,11 @@ scrape_configs:
   - job_name: 'cadvisor'
     static_configs:
       - targets: ['cadvisor:8080']
-    
+
+  - job_name: 'java-old'
+    static_configs:
+      - targets: ['host.docker.internal:8081']
+
+  - job_name: 'java'
+    static_configs:
+      - targets: ['host.docker.internal:8082']
